[[bin]]
name = 'largest-number'
path = 'src/0179.largest-number/solution.rs'

[[bin]]
name = 'remove-duplicate-letters'
path = 'src/0316.remove-duplicate-letters/solution.rs'

[[bin]]
name = 'increasing-triplet-subsequence'
path = 'src/0334.increasing-triplet-subsequence/solution.rs'

[[bin]]
name = 'wiggle-subsequence'
path = 'src/0376.wiggle-subsequence/solution.rs'

[[bin]]
name = 'remove-k-digits'
path = 'src/0402.remove-k-digits/solution.rs'

[dependencies]
anyhow = '1.0.79'
leetgo-rs = '0.2.1'
serde = '1.0.196'
serde_json = '1.0.113'

[package]
edition = '2024'
name = 'leetcode-solutions'
version = '0.1.0'
